--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Website</h1>
     <table>
       <tr>
-        <td><img src="gowtham.jpg" width="100px" height="100px"></td>
+        <td><img src="https://assets.thehansindia.com/h-upload/feeds/2019/03/23/155967-srkr.jpg" width="100px" height="100px"></td>
         <td><p>I am gowtham from department of cse studying in SRKR</p><p>Reg no is <strong>21b91a05g7</strong></p></td>
       </tr>
     </table>
